<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Team-OctOs

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">AboutOctOs</string>

    <!-- About -->
    <string name="devs">The Crew</string>
    <string name="octos" translatable="false">Team-OctOs</string>
    <string name="octos_website_title">Team-OctOs website</string>
    <string name="octos_website_summary">Visit www.teamoctos.com</string>
    <string name="octos_review_title">Team-OctOs Code Review - Gerrit</string>
    <string name="octos_review_summary">Visit Team-OctOs\'s Gerrit instance</string>
    <string name="about_octos">About Team-OctOs</string>
    <string name="about_octos_summary">@null</string>

    <!-- Team OctOs -->
    <string name="donate_octos" translatable="false">    </string>
    <string name="twitter_octos" translatable="false">teamoctos</string>
    <string name="github_octos" translatable="false">https://github.com/Team-OctOS</string>
    <string name="gplus_octos" translatable="false">https://plus.google.com/communities/102188586220747781076/</string>
    <string name="email_octos" translatable="false">teamoctos@gmail.com</string>


    <string name="url_octos" translatable="false">http://teamoctos.com/</string>
    <string name="url_octos_gerrit" translatable="false">http://review.teamoctos.com:8080/</string>
    <string name="team_octos_project" translatable="false">Team-OctOS</string>
    <string name="team_octos_members">The Crew</string>
    <string name="team_octos_supporters">Supporters</string>
    <string name="octos_supporters_url">http://www.teamoctos.com/our-supporters/</string>
    <string name="team_octos_extras">Extras</string>
    <string name="octos_extras_url">http://www.teamoctos.com/oct-m-extras/</string>
    <string name="team_octos_kraken">Kraken Kernel</string>
    <string name="octos_kraken_url">http://www.teamoctos.com/kraken-kernel-oct-m/</string>

    <!-- Developers -->

    <string name="dev_hedwig34" translatable="false">hedwig34</string>
    <string name="twitter_hedwig34" translatable="false">hedwig34</string>
    <string name="github_hedwig34" translatable="false">https://github.com/hedwig34</string>
    <string name="gplus_hedwig34" translatable="false">https://plus.google.com/+Aaronhedwig34Weis/about</string>
    <string name="email_hedwig34" translatable="false">hedwig34@gmail.com</string>

    <string name="dev_cjkacz" translatable="false">cjkacz</string>
    <string name="twitter_cjkacz" translatable="false">cjkacz_</string>
    <string name="github_cjkacz" translatable="false">https://github.com/cjkacz</string>
    <string name="gplus_cjkacz" translatable="false">@string/gplus_octos</string>
    <string name="email_cjkacz" translatable="false">cjkacz@gmail.com</string>

    <string name="dev_hlxanthus" translatable="false">hlxanthus</string>
    <string name="twitter_hlxanthus" translatable="false">hlxanthus</string>
    <string name="github_hlxanthus" translatable="false">https://github.com/hlxanthus</string>
    <string name="gplus_hlxanthus" translatable="false">@null</string>
    <string name="email_hlxanthus" translatable="false">christianjhayden@gmail.com</string>

    <string name="dev_bthorne79" translatable="false">bthorne79</string>
    <string name="twitter_bthorne79" translatable="false">@null</string>
    <string name="github_bthorne79" translatable="false">https://github.com/bthorne79</string>
    <string name="gplus_bthorne79" translatable="false">@null</string>
    <string name="email_bthorne79" translatable="false">rcovington79@gmail.com</string>

    <string name="dev_CJDubbsy" translatable="false">Dubbsy</string>
    <string name="twitter_CJDubbsy" translatable="false">CJDubbsy</string>
    <string name="github_CJDubbsy" translatable="false">https://github.com/CJDubbsy</string>
    <string name="gplus_CJDubbsy" translatable="false">@null</string>
    <string name="email_CJDubbsy" translatable="false">Cjwindhausen@gmail.com</string>

    <string name="dev_canondroid15" translatable="false">canondroid15</string>
    <string name="twitter_canondroid15" translatable="false">@string/twitter_octos</string>
    <string name="github_canondroid15" translatable="false">@null</string>
    <string name="gplus_canondroid15" translatable="false">https://plus.google.com/u/0/102791315682894112550/posts</string>
    <string name="email_canondroid15" translatable="false">@string/email_octos</string>

    <string name="dev_jlask" translatable="false">jlask</string>
    <string name="twitter_jlask" translatable="false">jason972000</string>
    <string name="github_jlask" translatable="false">https://github.com/jlask</string>
    <string name="gplus_jlask" translatable="false">https://plus.google.com/u/0/110570615017976620207/about</string>
    <string name="email_jlask" translatable="false">jason972000@gmail.com</string>

    <!-- Device Maintainer can input their inforation here or set it in an overlay for the device-->
    <string name="device_support_title" translatable="false">This device is supported by:</string>
    <string name="dev_device" translatable="false">OctOs Community</string>
    <string name="twitter_device" translatable="false">@null</string>
    <string name="github_device" translatable="false">@null</string>
    <string name="gplus_device" translatable="false">https://plus.google.com/communities/102188586220747781076/stream/5abec31e-4edd-4909-9758-89d091156b5a</string>
    <!-- The developer photo is pulled from Gravatar using the supplied email address
         Set email_device to @null to use the fallback photo image -->
    <string name="email_device" translatable="false">@null</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="hide_icon_title">Hide the launcher icon</string>
    <string name="hide_icon_description">This hides the AboutOctOs icon from the launcher
        preventing it from appearing in the app drawer.
    </string>
    <string name="title_activity_settings">Settings</string>
</resources>
