<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Team-OctOs

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:octos="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

    <LinearLayout
            style="@style/settingsFragmentStyle">

        <com.about.octos.widgets.DeveloperPreference
                octos:nameDev="Team-OctOS"
                octos:twitterHandle="@string/twitter_octos"
                octos:githubLink="@string/github_octos"
                octos:gplusLink="@string/gplus_octos"
                octos:emailDev="@string/email_octos"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <com.about.octos.settings.UrlSetting
                android:id="@+id/octos"
                android:title="@string/octos_website_title"
                android:summary="@string/octos_website_summary"
                octos:url="@string/url_octos"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <com.about.octos.settings.UrlSetting
                android:id="@+id/octos_review"
                android:title="@string/octos_review_title"
                android:summary="@string/octos_review_summary"
                octos:url="@string/url_octos_gerrit"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/device_support_title"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:layout_marginStart="15dip"
                android:layout_marginEnd="6dip"
                android:layout_marginTop="6dip"
                android:layout_marginBottom="6dip"
                android:layout_weight="1"
                />

        <com.about.octos.widgets.DeveloperPreference
                octos:nameDev="@string/dev_device"
                octos:twitterHandle="@string/twitter_device"
                octos:githubLink="@string/github_device"
                octos:gplusLink="@string/gplus_device"
                octos:emailDev="@string/email_device"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
